# OAiP

./: VD_games  pyproject.toml
games_project_roshchina/VD_games/: __init__.py
games_project_roshchina/VD_games/games/: even.py
games_project_roshchina/VD_games/scripts/: VD_even.py  VD_games.py  VD_main.py
